<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.owlingo.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.owlingo.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.owlingo.ui.home.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/StartFragment"
        android:name="com.example.owlingo.BlankFragment"
        android:label="Start"
        tools:layout="@layout/start_fragment" />

    <fragment
        android:id="@+id/navigation_community"
        android:name="com.example.owlingo.ui.community.QuestionFragment"
        android:label="@string/title_community"
        tools:layout="@layout/fragment_question" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.owlingo.LoginFragment"
        android:label="login_fragment"
        tools:layout="@layout/login_fragment" />
    <fragment
        android:id="@+id/signupFragment"
        android:name="com.example.owlingo.SignupFragment"
        android:label="signup_fragment"
        tools:layout="@layout/signup_fragment" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.owlingo.ProfileFragment"
        android:label="profile_fragment"
        tools:layout="@layout/profile_fragment" />
    <fragment
        android:id="@+id/logoFragment"
        android:name="com.example.owlingo.LogoFragment"
        android:label="logo_fragment"
        tools:layout="@layout/logo_fragment" />

</navigation>