<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.SignupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/back_btn"
            android:src="@drawable/download__3__removebg_preview__1_"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/register_title"
            app:layout_constraintHorizontal_bias="0.37"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.045"
            style="@style/back_btn" />

        <TextView
            android:id="@+id/register_title"
            android:text="@string/register"
            app:flow_horizontalAlign="center"
            app:flow_verticalAlign="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="35dp"
            style="@style/Main_title" />

        <TextView
            android:id="@+id/app_title"
            android:text="@string/app_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="121dp"
            style="@style/App_title" />

        <TextView
            android:id="@+id/create_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/doppio_one"
            android:text="@string/create_title"
            android:textColor="@color/deep_blue"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="185dp" />

        <EditText
            android:id="@+id/name_edit"
            android:layout_width="300dp"
            android:layout_height="46dp"
            android:ems="10"
            android:hint="Name"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="251dp" />

        <EditText
            android:id="@+id/email_edit"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="330dp" />

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="300dp"
            android:layout_height="44dp"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="411dp" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="259dp"
            android:layout_height="47dp"
            android:text="@string/register"
            app:cornerRadius="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="565dp" />

        <TextView
            android:id="@+id/exist_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exist_acc"
            android:textColor="@color/deep_blue"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.244"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="640dp" />

        <TextView
            android:id="@+id/loginHere_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="yourClickFunction"
            android:text="Login Here"
            android:textColor="#0000FF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toEndOf="@+id/exist_title"
            tools:layout_editor_absoluteY="640dp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="298dp"
            android:layout_height="42dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="491dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>